[package]
name = "logoot-plus"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/logoot.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.10.0"
rand_chacha = "0.10"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dependencies.getrandom]
version = "0.4.2"
# The feature was renamed from "js" to "wasm_js" in version 0.3+
features = ["wasm_js"]

