[package]
name = "logoot-plus"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/logoot.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.10.0"
rand_chacha = "0.10"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
ahash = "0.8"
dhat = { version = "0.3", optional = true }
smallvec = { version = "1", features = ["union"] }

[features]
default = []
mem-heap = ["dep:dhat"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trace_merge"
harness = false

[dependencies.getrandom]
version = "0.4.2"
# The feature was renamed from "js" to "wasm_js" in version 0.3+
features = ["wasm_js"]

